Navbar Bug: fixed non-scrollable navbar and aligned submenu's to each menu

--- a/public/assets/css/structure.css
+++ b/public/assets/css/structure.css
@@ -1132,16 +1132,16 @@ code { color: #e7515a; }
     .navbar .toggle-sidebar, .navbar .sidebarCollapse {
         display: none;
     }
-    .topbar-nav.header::-webkit-scrollbar {
-        /* width: 0.1em; */
+    .topbar-nav.header #topbar::-webkit-scrollbar {
         height: 0.1em;
+        display: none;
     }
 
-    .topbar-nav.header::-webkit-scrollbar-track {
+    .topbar-nav.header #topbar::-webkit-scrollbar-track {
         box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     }
 
-    .topbar-nav.header::-webkit-scrollbar-thumb {
+    .topbar-nav.header #topbar::-webkit-scrollbar-thumb {
         background-color: darkgrey;
         outline: 1px solid slategrey;
     }
@@ -1159,6 +1159,7 @@ code { color: #e7515a; }
 
 
         position: fixed;
+        /* position: relative; */
         top: 64px;
         right: 0;
         left: 0;
@@ -1171,15 +1172,16 @@ code { color: #e7515a; }
         min-height: 51px;
         max-width: 1600px;
         margin: 0 auto;
+        overflow-y: auto;
     }
     .topbar-nav.header nav#topbar ul.menu-categories {
         display: flex;
         margin-bottom: 0;
         margin-left: 5px;
-        overflow-y: auto;
+       
     }
     .topbar-nav.header nav#topbar ul.menu-categories li.menu {
-        position: relative;
+        /* position: relative; */
         padding: 11px 0 11px 0;
     }
     .topbar-nav.header nav#topbar ul.menu-categories li.menu:first-child > a > div span {
@@ -1256,6 +1258,9 @@ code { color: #e7515a; }
         opacity: 1;
         transform: translateY(0%);
         transition-delay: 0s, 0s, 0.3s;    }
+        .temp-div{
+            position: relative;
+        }
     .topbar-nav.header nav#topbar ul.menu-categories li.menu .submenu {
         position: absolute;
         top: 61px;
